2008-04-17  Sam Steingold  <sds@gnu.org>

	simplify support for FFI modules which want to use stdio.h
	* lispbibl.d (HAVE_FFI): export to clisp.h
	* foreign.d (init_ffi): register size_t and ssize_t
	* foreign1.lisp (size_t, ssize_t, FILE): add types
	* modules/bindings/glibc/linux.lisp ((size_t, ssize_t): do not redefine
	* modules/pari/pari.lisp (allocatemoremem): use size_t
	* modules/postgresql/postgresql.lisp (size_t): do not redefine
	(PQtrace, PQprint, PQdisplayTuples, PQprintTuples):
	use FILE instead of c-pointer
	* modules/syscalls/calls.c (fopen, fdopen, fclose)
	(clearerr, feof, ferror, fileno) [HAVE_FFI]: implement
	* modules/syscalls/posix.lisp (fopen, fdopen, fclose)
	(clearerr, feof, ferror, fileno) [FFI]: export

2008-04-17  Sam Steingold  <sds@gnu.org>

	* modules/bindings/glibc/linux.lisp (FILE): define to c-pointer,
	use for all FILE functions instead of c-pointer

2008-04-17  Sam Steingold  <sds@gnu.org>

	* modules/postgresql/postgresql.lisp: sync with libpq-fe.h 1.141 (8.3)
	(PQconnectionNeedsPassword, PQconnectionUsedPassword, PQisthreadsafe)
	(PQnparams, PQparamtype, PQdescribePrepared, PQdescribePortal)
	(PQsendDescribePrepared, PQsendDescribePortal, PQescapeStringConn)
	(PQescapeByteaConn, lo_create, lo_truncate, PQencryptPassword)
	(pg_char_to_encoding, pg_encoding_to_char) [commented out for 8.1.4]
	(pg_valid_server_encoding_id): add
	sync with postgres_ext.h 1.17 (8.3)
	(PG_DIAG_SEVERITY, PG_DIAG_SQLSTATE, PG_DIAG_MESSAGE_PRIMARY)
	(PG_DIAG_MESSAGE_DETAIL, PG_DIAG_MESSAGE_HINT)
	(PG_DIAG_STATEMENT_POSITION, PG_DIAG_INTERNAL_POSITION)
	(PG_DIAG_INTERNAL_QUERY, PG_DIAG_CONTEXT, PG_DIAG_SOURCE_FILE)
	(PG_DIAG_SOURCE_LINE, PG_DIAG_SOURCE_FUNCTION): add
	* modules/postgresql/configure.in: check for the new functions

2008-04-16  Sam Steingold  <sds@gnu.org>

	* debug.d (read_form): pass the remainder of the input line to the
	command function
	* reploop.lisp (debug-reset-io, debug-help, debug-unwind, debug-quit)